# pocket_app

./: .gitignore  README.md  config.json  pocket-app-win32.spec  pyproject.toml
.github/workflows/: build-release.yml
docs/: api.md  hymmnos-words.md
examples/: icon_button_example.py  language_selector_example.py  pagination_example.py  pet_card_example.py  pokedex_view_example.py  popup_panel_example.py  search_bar_example.py  side_navigation_example.py  stat_radar_example.py  tag_example.py  theme_switch_example.py  toast_example.py
resources/: config-dev.json  config-release.json  config.json
resources/i18n/: en_US.json  ex_hy.json  ja_JP.json  lzh_CN.json  zh_CN.json
resources/qss/base/: icon_button.qss  language_selector.qss  loading_placeholder.qss  main_window.qss  pagination.qss  popup_panel.qss  search_bar.qss  side_navigation.qss  tag.qss  toast.qss
resources/qss/dark/: variables.json
resources/qss/light/: side_navigation.qss  variables.json
scripts/: build.ps1  install.ps1  pocket-app-win32.spec  pocket-app-win64.spec  run.ps1
skills/python风格规范/: skill.md
skills/塔语构词规范/: skill.md
skills/项目文件规范/: skill.md
src/pocket_app/: api.py  config.py  main.py  resources.py  utils.py
src/pocket_app/components/: __init__.py  icon_button.py  language_selector.py  loading.py  network_image.py  pagination.py  pet_card.py  popup_panel.py  search_bar.py  side_navigation.py  stat_radar.py  tag.py  (+1 more)
test/: conftest.py
test/components/: test_icon_button.py  test_search_bar.py  test_side_navigation.py  test_tag.py  test_theme_switching.py  test_toast.py
(+17 files in other folders)
