[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket_app"
description = "宝可梦数据展示前端"
dynamic = ["version"]
dependencies = ["PyQt6>=6.7,<7.0", "aiohttp>=3.13,<4.0"]

[tool.setuptools.dynamic]
version = { attr = "pocket_app.__version__" }

[tool.poetry.dependencies]
python = "3.13.8"
pyqt6 = "6.11.0"
aiohttp = "3.13.5"
